--- a/skills.html
+++ b/skills.html
@@ -146,7 +146,7 @@
         <p>Java</p>
       </div>
       <div class="skill-card">
-        <img src="images/SQl.png" alt="SQL" />
+        <img src="images/SQL.png" alt="SQL" />
         <p>SQL</p>
       </div>
       <div class="skill-card">
