--- a/projects.html
+++ b/projects.html
@@ -58,15 +58,16 @@
       margin-bottom: 25px;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(255,215,0,0.15);
-      transition: transform 0.3s;
+      transition: transform 0.3s, backdrop-filter 0.4s;
       overflow: hidden;
     }
 
     .project:hover {
       transform: scale(1.02);
+      box-shadow: 0 0 30px rgba(255,215,0,0.4);
+      backdrop-filter: blur(3px);
     }
 
-    /* Glitter Effect */
     .project::before {
       content: '';
       position: absolute;
@@ -110,6 +111,28 @@
       color: #ddd;
     }
 
+    .view-btn {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background: gold;
+      color: black;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      font-size: 16px;
+      opacity: 0;
+      cursor: pointer;
+      transition: opacity 0.4s ease;
+      z-index: 2;
+    }
+
+    .project:hover .view-btn {
+      opacity: 1;
+    }
+
     footer {
       background: rgba(0, 0, 0, 0.8);
       color: #f0e6d2;
@@ -137,12 +160,14 @@
     <h1 style="font-family:'Cinzel', serif; text-align:center; color: gold; font-size: 2.3rem; margin-bottom: 40px;">My Projects</h1>
 
     <div class="project">
+      <button class="view-btn" onclick="window.open('https://example.com/project1', '_blank')">View</button>
       <h2>Time Tracking Web App</h2>
       <img src="images/codeathon.jpg" alt="Code-a-thon" />
       <p>I created a time tracking web application using HTML, CSS, and JavaScript. This project won 1st Prize in Code-a-thon 2024 conducted by ABC College. It allows users to manage productivity with timer, task log, and session tracking.</p>
     </div>
 
     <div class="project">
+      <button class="view-btn" onclick="window.open('https://example.com/project2', '_blank')">View</button>
       <h2>Responsive Website Design</h2>
       <img src="images/webdesign.jpg" alt="Web Design" />
       <p>This project was selected as a finalist in a national-level competition hosted by XYZ Institute. It features a mobile-first responsive layout with animations, gallery, and contact integration using HTML, CSS, and Bootstrap.</p>
@@ -171,6 +196,5 @@
       e.preventDefault();
     });
   </script>
-
 </body>
 </html>
