--- a/projects.html
+++ b/projects.html
@@ -165,19 +165,19 @@
   <div class="container">
     <h1 style="font-family:'Cinzel', serif; text-align:center; color: gold; font-size: 2.3rem; margin-bottom: 40px;">My Projects</h1>
 
+    <!-- Project 1: ZARA Chatbot -->
     <div class="project">
       <div class="project-content">
-        <h2>Time Tracking Web App</h2>
-        <img src="images/codeathon.jpg" alt="Code-a-thon" />
-        <p>I created a time tracking web application using HTML, CSS, and JavaScript. This project won 1st Prize in Code-a-thon 2024 conducted by ABC College. It allows users to manage productivity with timer, task log, and session tracking.</p>
+        <h2>ZARA Chatbot</h2>
+        <p>ZARA is a custom-built AI chatbot developed using HTML, CSS, JavaScript, Python (Flask), and integrated with Google's Gemini API. It offers real-time responses, sleek UI, and was designed as a smart assistant demo for portfolio websites and productivity tools.</p>
       </div>
-      <button class="view-btn" onclick="window.open('https://example.com/project1', '_blank')">View</button>
+      <button class="view-btn" onclick="window.open('https://example.com/zara-chatbot', '_blank')">View</button>
     </div>
 
+    <!-- Project 2: Responsive Website -->
     <div class="project">
       <div class="project-content">
         <h2>Responsive Website Design</h2>
-        <img src="images/webdesign.jpg" alt="Web Design" />
         <p>This project was selected as a finalist in a national-level competition hosted by XYZ Institute. It features a mobile-first responsive layout with animations, gallery, and contact integration using HTML, CSS, and Bootstrap.</p>
       </div>
       <button class="view-btn" onclick="window.open('https://example.com/project2', '_blank')">View</button>
