--- a/projects.html
+++ b/projects.html
@@ -171,7 +171,7 @@
         <h2>ZARA Chatbot</h2>
         <p>ZARA is a custom-built AI chatbot developed using HTML, CSS, JavaScript, Python (Flask), and integrated with Google's Gemini API. It offers real-time responses, sleek UI, and was designed as a smart assistant demo for portfolio websites and productivity tools.</p>
       </div>
-      <button class="view-btn" onclick="window.open('https://example.com/zara-chatbot', '_blank')">View</button>
+      <button class="view-btn" onclick="window.open('https://zara-chatbot-r3ap.onrender.com', '_blank')">View</button>
     </div>
 
     <!-- Project 2: Responsive Website -->
