--- a/projects.html
+++ b/projects.html
@@ -170,10 +170,10 @@
     <div class="project">
       <div class="project-content">
         <h2>Weather Forecasting Web App</h2>
-        <p>This app fetches weather data using a weather API and Flask backend. It shows real-time weather updates, including temperature, humidity, wind, and weather changes every 3 hours. Built with HTML, CSS, JavaScript, and Flask.</p>
+        <p>This app fetches weather data using a weather API and Flask backend. It shows real-time weather updates, including temperature, humidity, wind, and weather changes every 3 hours all over the world. Built with HTML, CSS, JavaScript, and Flask.</p>
       </div>
       <!-- Update the link below after hosting -->
-      <button class="view-btn" onclick="window.open('#', '_blank')">View</button>
+      <button class="view-btn" onclick="window.open('https://weather-forecasting-b07t.onrender.com/', '_blank')">View</button>
     </div>
 
   </div>
