--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
   </header>
 
 <section class="hero">
-  <img src="images/pics.jpg" alt="Nishanth" draggable="false" oncontextmenu="return false;" onmousedown="return false;" ondragstart="return false;" />
+  <img src="images/pic.jpg" alt="Nishanth" draggable="false" oncontextmenu="return false;" onmousedown="return false;" ondragstart="return false;" />
   <h1>I'M NISHANTH 👑</h1>
   <a href="resume.pdf" class="resume-btn" download>RESUME</a>
   <div class="glow-container">
